--- a/src/app/informations/components/info-diplome/info-diplome.component.html
+++ b/src/app/informations/components/info-diplome/info-diplome.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="main-container">
         <h3 class="suscep">Formations susceptibles de vous intéresser</h3>
-        <app-pub-interest-item></app-pub-interest-item>
+        <!-- <app-pub-interest-item></app-pub-interest-item> -->
         <div>
         </div>
         <div class="redaction-info">
@@ -47,7 +47,7 @@
                 soit à une formation professionnelle soit à l'entrée dans l'Enseignement secondaire.
             </p>
     
-            <p-accordion [activeIndex]="0" [multiple]="true">
+            <p-accordion  [multiple]="true">
                 <p-accordionTab header="L'enseignement secondaire Général">                    
                     <p-tabView>
                         <p-tabPanel header="Francophone">
@@ -259,7 +259,7 @@
 
                             <div>
                                 <span> <p-button routerLink="/info/cap"  label="Le CAP et ses spécialités "></p-button> </span>
-                                <span> <p-button routerLink="/info/bacPro" label="les Bac Pro et Brevets "></p-button> </span>
+                                <span> <p-button routerLink="/info/bactec" label="les Bac Pro et Brevets "></p-button> </span>
                             </div>
 
                             <hr>
