--- a/src/app/shared/components/pub-interest-item/pub-interest-item.component.html
+++ b/src/app/shared/components/pub-interest-item/pub-interest-item.component.html
@@ -1,1 +1,106 @@
-<p>pub-interest-item works!</p>
+<div class="card ">
+    <p-card [header]="school.nom_dip" 
+            [subheader]="school.nom_e" 
+            class="training-card"  
+            (click)="showDialog()" 
+            [style]="{'cursor':'pointer'}">
+        <div class="grid-container" >
+            <div class="grid-content">
+                <img alt="Card" [src]="school.logo_e" />
+                
+            </div>
+            <div class="grid-content">
+                <p-tag class="fas" [style]="{'background':'#f4f6fc', 'color':'#344cbe'}" [value]="school.groupe" icon="pi pi-user"></p-tag>
+                <p-tag [style]="{'background':'#f4f6fc', 'color':'#344cbe'}" *ngIf="school.ville_cam"  [value]="school.ville_cam" icon="pi-map-marker"></p-tag>
+                <p-tag [style]="{'margin-top': '7px','background':'#f4f6fc', 'color':'#344cbe'}" *ngIf="school.date_debut_f"  [value]="school.date_debut_f" icon="pi-dollar"></p-tag>
+                <p-tag [style]="{'margin-top': '7px','background':'#f4f6fc', 'color':'#344cbe'}" *ngIf="school.cout_f"  [value]="school.cout_f" icon="pi-dollar"></p-tag>
+            </div>
+        </div>
+
+        <ng-template pTemplate="footer">
+            <p-button label="Demander des informations"></p-button>
+        </ng-template>
+    </p-card>
+    <p-dialog   header="Détail de la formation" 
+                [(visible)]="visible" 
+                [style]="{width: '90vw'}"
+                [modal]="true"  
+                [draggable]="false" 
+                [resizable]="false">
+                <p-card [header]="school.nom_dip" [subheader]="school.nom_e" class="training-card medium" >
+                    <div class="grid-container" >
+                        <div class="grid-content">
+                            <img alt="Card" [src]="school.logo_e" />
+                        </div>
+                        <div class="grid-content">
+                            <p-tag class="fas" [style]="{'background':'#f4f6fc', 'color':'#344cbe'}" [value]="school.groupe" icon="pi pi-user"></p-tag>
+                            <p-tag [style]="{'background':'#f4f6fc', 'color':'#344cbe'}" *ngIf="school.ville_cam"  [value]="school.ville_cam" icon="pi-map-marker"></p-tag>
+                            <p-tag [style]="{'margin-top': '7px','background':'#f4f6fc', 'color':'#344cbe'}" *ngIf="school.date_debut_f"  [value]="school.date_debut_f" icon="pi-dollar"></p-tag>
+                            <p-tag [style]="{'margin-top': '7px','background':'#f4f6fc', 'color':'#344cbe'}" *ngIf="school.cout_f"  [value]="school.cout_f" icon="pi-dollar"></p-tag>
+                            <p-tag [style]="{'margin-top': '7px','background':'#f4f6fc', 'color':'#344cbe'}"  value="Reconnue par l'Etat" icon="pi-dollar"></p-tag>
+                        </div>
+                    </div>
+                </p-card>
+                <div class="training-card-show">
+                    <div class="more-info">
+                        <div class="accreditation">
+                            <h5>Accréditation</h5>                            
+                        </div>
+                        <ng-container *ngIf="school.descriptif_dip">
+                            <h5>Description du diplôme :</h5>
+                            <br>
+                            <span [innerHTML]="school.descriptif_dip"></span>
+                            <hr>
+                            <span [innerHTML]="school.descriptif_f"></span>
+                        </ng-container>
+                        <ng-container *ngIf="school.descriptif_e">
+                            <h5>Description</h5>
+                            <br>
+                            <span [innerHTML]="school.descriptif_e"></span>
+                            <hr>
+                            <span [innerHTML]="school.descriptif_f"></span>
+                        </ng-container>
+                    </div>
+                    <div class="footer">
+                        <p-button label="Voir l'établissement" (click)="showOnePage(school.nom_e)"  styleClass="p-button-help"></p-button>
+                        <p-button label="Demander des informaions" (click)="sendNumber()"  styleClass="p-button-warning" ></p-button>
+                    </div>
+                </div>
+    </p-dialog>
+    <p-dialog   header="Vous souhaitez vous informer sans engagement sur la formation :" 
+                [(visible)]="visibleCall" 
+                [style]="{width: '90vw'}" 
+                [modal]="true"  
+                [draggable]="false" 
+                [resizable]="false">
+                <p-card [header]="school.nom_dip" [subheader]="school.nom_e" class="training-card medium" >
+                    <div class="grid-container" >
+                        <div class="grid-content">
+                            <img alt="Card" [src]="school.logo_e" />
+                        </div>
+                    </div>
+                </p-card>
+                <!-- 
+                <label for="telInput">Faites-vous rappeler par l'école !*</label>
+                <form #telForm="ngForm" (ngSubmit)="onSubmitPhone(telForm)">
+                    <input type="tel" id="telInput" name="userPhone" [(ngModel)]="userPhone"> 
+                    <h2>Faites-vous rappeler par l'école !*</h2>
+                    <mat-form-field appearance="outline">
+                        <ngx-mat-intl-tel-input
+                            id="telInput" name="userPhone" [(ngModel)]="userPhone"
+                            [preferredCountries]="['cm', 'td']"
+                            placeholder="Téléphone"
+                        ></ngx-mat-intl-tel-input>
+                        <mat-label>Numéro Whatsapp si possible</mat-label>
+                        
+                        <input id="phone" class="input" type="text" placeholder=" "  formControlName="phone">
+                        <div class="cut"></div>
+                        <label for="phone" class="placeholderc">Téléphone*</label>
+                    </mat-form-field>
+                    <p-button styleClass="p-button-help" type="submit">OK!</p-button>
+                </form>
+            -->
+
+    </p-dialog>
+
+</div>
