--- a/src/app/informations/components/info-hnd/info-hnd.component.html
+++ b/src/app/informations/components/info-hnd/info-hnd.component.html
@@ -1,1 +1,76 @@
-<p>info-hnd works!</p>
+<app-headmsg 
+    [titre]="titre"
+    [soustitre]="soustitre"
+    [photo] = "photo"
+    >
+</app-headmsg>
+<app-start ></app-start>
+<div class="container">
+    <div class="first-pub">
+        <app-pub-first></app-pub-first>
+    </div>
+    <div class="main-container">
+        <!-- <app-pub-interest-item *ngFor="let schooli of school$ | async" [school]="schooli"></app-pub-interest-item> -->
+        <div class="redaction-info">   
+            <h1>Higher National Diploma (HND) </h1> 
+            <p>
+                The Cameroon’s Brevets du Technicien Supérieur (BTS) and the Higher National Diploma (HND) are national 
+                higher education diplomas issued by the Ministry of Higher Education in Cameroon located in Yaounde, which 
+                attest to an academic and technical qualification at the Baccalaureate level or General Certificate of 
+                Education Advanced Level plus two years or four semesters of study. 
+            </p>       
+            <p-accordion [activeIndex]="0">
+                <p-accordionTab header="What is HND ?">
+                    <p> 
+                        HND is a two-year professional university program which focuses on learning by doing. 
+                        It is designed to teach the knowledge and skills needed for employment and paving 
+                        the way for a Bachelor's Degree Program. The HND originated from the United Kingdom 
+                        and has long been adopted by all Commonwealth nations. It was introduced in Cameroon 
+                        in 2002 by Ministerial Order No. 02/0069/MINESUP/DDES.
+                    </p>
+                </p-accordionTab>
+                <p-accordionTab header="how to integrate HND ?">
+                    <p>
+                        The HND is earned in Cameroon through a national examination organized each academic 
+                        year in one session by the Ministry of Higher Education through the National Committee 
+                        for the Organization of HND Examinations. The examination is open only to those who 
+                        have completed the programme of study for the HND in an institution of Higher Learning 
+                        approved by the Ministry of Higher Education.
+                    </p>
+                </p-accordionTab>
+                <p-accordionTab header="What is the progam of HND ?">
+                    <p>
+                       
+                    </p>
+                </p-accordionTab>
+                <p-accordionTab header="What can I do after my HND ?">
+                    <p>
+                       
+                    </p>
+                </p-accordionTab>
+                <p-accordionTab header="How to choose a good Institut for my HND ?">
+                    <p>
+                        
+                    </p>
+                </p-accordionTab>
+            </p-accordion>
+
+            <p-card header="List of HND" >
+                <p-card></p-card>
+            </p-card>
+            
+        </div>
+    </div>
+    <aside class="side-container">
+        <app-side-info></app-side-info>
+    </aside>
+</div>
+<!-- 
+<app-info-redaction></app-info-redaction>
+<app-interest-list></app-interest-list>
+<app-interest-actualite></app-interest-actualite>
+<app-interest-avis></app-interest-avis>
+<app-interest-classification></app-interest-classification> 
+-->
+
+<!-- <app-under-building></app-under-building> -->
