Update Landing page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div>
+<div  id="header">
     <span><a href="" routerLink=""  > <img src="../../assets/images/logo-no-background.png" class="logo" alt="Camerdiplome"> </a></span>
     <p-menubar [model]="items" />
 </div>
