--- a/src/app/orientation/components/city/city.component.html
+++ b/src/app/orientation/components/city/city.component.html
@@ -3,6 +3,7 @@
 </div>
 <h1>Dans quelle ville souhaitez-vous suivre votre formation ?</h1>
 <!-- <mat-spinner *ngIf="loading$ | async"></mat-spinner> -->
+<p-progressSpinner *ngIf="loading$ | async" ariaLabel="loading" />
 <div >
     <div class="container">
         <button class="but" pButton pRipple  
