--- a/src/app/orientation/components/field/field.component.html
+++ b/src/app/orientation/components/field/field.component.html
@@ -3,6 +3,7 @@
 </div>
 <h1>Dans quelle filière souhaitez-vous effectuer votre formation ?</h1>
 <!-- <mat-spinner *ngIf="loading$ | async"></mat-spinner> -->
+<p-progressSpinner *ngIf="loading$ | async" ariaLabel="loading" />
 <p-accordion [activeIndex]="-1" >
     <p-accordionTab header="Agricultue, Environnement" [selected]="true" [disabled]="agriLenght === 0">
         <ng-container *ngFor="let field of domaine$ | async | domfilter:agri">
