--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -62,7 +62,7 @@
               <a routerLink="about" class="text-reset">Qui sommes-nous ?</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Rejoignez-nous</a>
+              <a routerLink="building" class="text-reset">Rejoignez-nous</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -74,19 +74,19 @@
               ACCÈS DIRECT
             </h6>
             <p>
-              <a href="#!" class="text-reset">Camerdiplome Avis</a>
+              <a routerLink="building" class="text-reset">Camerdiplome Avis</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Journée porte ouverte - JPO</a>
+              <a routerLink="building" class="text-reset">Journée porte ouverte - JPO</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Liste des diplômes</a>
+              <a routerLink="building" class="text-reset">Liste des diplômes</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Que faire après le bac ?</a>
+              <a routerLink="building" class="text-reset">Que faire après le bac ?</a>
             </p>
             <p>
-                <a href="#!" class="text-reset">Liste des établissements</a>
+                <a routerLink="building" class="text-reset">Liste des établissements</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -115,7 +115,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2023 Copyright:
-      <a class="text-reset fw-bold" href="#">FNJ.com</a>
+      <a class="text-reset fw-bold" routerLink="building" >FNJ.com</a>
     </div>
     <!-- Copyright -->
   </footer>
