--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,43 @@
 <app-header/>
+<nav class="navbar">
+    <ul routerLinkActive="active">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="accueil">Home</a>
+      </li>
+      <li class="nav-item" >
+        <a  class="nav-link" routerLink="admin">Admin Board</a>
+      </li>
+      <li class="nav-item" *ngIf="showModeratorBoard">
+        <a  class="nav-link" routerLink="mod">Moderator Board</a>
+      </li>
+      <li class="nav-item" *ngIf="isLoggedIn">
+        <a  class="nav-link"  routerLink="admin">Admin Board</a>
+      </li> 
+      <!-- <li class="nav-item" >
+        <a href="/user" class="nav-link"  routerLink="user">User</a>
+      </li> -->
+    </ul>
+
+    <ul class="" *ngIf="!isLoggedIn">
+      
+      <li class="nav-item">
+        <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
+      </li> 
+      <li class="nav-item">
+        <a href="/login" class="nav-link" routerLink="login">Login</a>
+      </li> 
+   
+    </ul>
+
+    <ul *ngIf="isLoggedIn">
+      <li class="nav-item">
+        <!-- <a href="/profil" class="nav-link" routerLink="profil">{{username}}</a> -->
+        <a href="#" class="nav-link" >{{username}}</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" (click)="logout()">LogOut</a>
+      </li>
+    </ul>
+</nav>
 <router-outlet />
 <app-footer/>
