--- a/src/app/admin/components/admin-start/admin-start.component.scss
+++ b/src/app/admin/components/admin-start/admin-start.component.scss
@@ -2,3 +2,20 @@ button {
     margin-left: 10px;
     margin-bottom: 15px;
 }
+
+:host {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; 
+    background-color: rgba(253, 101, 133, 1);
+}
+
+#log {
+    padding: 20px;
+    background-color: rgba(60, 10, 107, 0.562);
+    border-radius: 10px;
+    border: 0;
+    outline: none;
+    width: 300px;
+}
